--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div id="slide-1" class="slide" id="slide-1">
+                    <div id="slide-1" class="slide slide-1" id="slide-1">
                         <p class="slide__paragraph">Comedy</p>
                         <h1 class="slide__h1">John Cleese and Eric Idle</h1>
                         <h4 class="slide__h4">Crown Melbourne</h4>
