--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -7,6 +7,7 @@
     <title>Aussie Luxe - About Us</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/swiper.min.css">
 </head>
 
 <body>
@@ -121,6 +122,21 @@
             </div>
         </footer>
     </section>
+
+    <script src="../styles/swiper.min.js"></script>
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            loop: true, 
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+        });
+    </script>
 </body>
 
 </html>
