--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -91,7 +91,7 @@
             <div class="swiper-pagination"></div>
         </div>
 
-
+    </section>
     <section class="section-main padding-zero h-15">
         <div class="info">
             <h1 class="h1 info__heading">
